force-app/main/default/objects/User/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>指人员在分公司内部所属的部门</description>
    <label>Hisense Department</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sales_Region__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Department</valueSetName>
    </valueSet>
</CustomField>