force-app/main/default/objects/User/fields/Direct_Sales_Department_Location__c.field-meta.xml
<CustomField>
    <fullName>Direct_Sales_Department_Location__c</fullName>
    <label>Direct Sales Department Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Q</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>