force-app/main/default/objects/User/fields/Email_Key__c.field-meta.xml
<CustomField>
    <fullName>Email_Key__c</fullName>
    <externalId>true</externalId>
    <label>Email Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>