force-app/main/default/objects/User/fields/HisenseSSOName__c.field-meta.xml
<CustomField>
    <fullName>HisenseSSOName__c</fullName>
    <externalId>true</externalId>
    <label>HisenseSSOName</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>