force-app/main/default/objects/User/fields/Plan_Customer_Visit_Num__c.field-meta.xml
<CustomField>
    <fullName>Plan_Customer_Visit_Num__c</fullName>
    <defaultValue>4</defaultValue>
    <label>Plan Customer Visit Num By Month</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>