force-app/main/default/objects/User/fields/Sales_Region__c.field-meta.xml
<CustomField>
    <fullName>Sales_Region__c</fullName>
    <label>Sales Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hisense USA</fullName>
            </value>
            <value>
                <fullName>USA(OEM)</fullName>
            </value>
            <value>
                <fullName>Hisense Mexico</fullName>
            </value>
            <value>
                <fullName>Hisense Australia</fullName>
            </value>
            <value>
                <fullName>Hisense Malaysia</fullName>
            </value>
            <value>
                <fullName>Hisense South Africa</fullName>
            </value>
            <value>
                <fullName>American Sales Department</fullName>
            </value>
            <value>
                <fullName>Middle East and Africa Sales Department</fullName>
            </value>
            <value>
                <fullName>Asia-Pacific Sales Department</fullName>
            </value>
            <value>
                <fullName>Key Account Sales Department</fullName>
            </value>
            <value>
                <fullName>Europe Sales Department</fullName>
            </value>
            <value>
                <fullName>Communications Sales Department</fullName>
            </value>
            <value>
                <fullName>Hisense Japan</fullName>
            </value>
            <value>
                <fullName>Hisense Canada</fullName>
            </value>
            <value>
                <fullName>Hisense Thailand</fullName>
            </value>
            <value>
                <fullName>Hisense India</fullName>
            </value>
            <value>
                <fullName>Hisense Indonesia</fullName>
            </value>
            <value>
                <fullName>Hisense Chile</fullName>
            </value>
            <value>
                <fullName>Hisense Dubai</fullName>
            </value>
            <value>
                <fullName>Hisense Colombia</fullName>
            </value>
            <value>
                <fullName>Hisense Argentina</fullName>
            </value>
            <value>
                <fullName>Hisense West Africa</fullName>
            </value>
            <value>
                <fullName>Hisense Saudi</fullName>
            </value>
            <value>
                <fullName>Hisense Vietnam</fullName>
            </value>
            <value>
                <fullName>Hisense Philippines</fullName>
            </value>
            <value>
                <fullName>Hisense Peru</fullName>
            </value>
            <value>
                <fullName>Hisense Singapore</fullName>
            </value>
            <value>
                <fullName>Hisense International</fullName>
            </value>
            <value>
                <fullName>Hisense UK</fullName>
            </value>
            <value>
                <fullName>Hisense Spain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>