force-app/main/default/objects/User/listViews/AdminUsers.listView-meta.xml
<ListView>
    <fullName>AdminUsers</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>TIMEZONE</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>HisenseSSOName__c</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>startsWith</operation>
        <value>System Admin</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>contains</operation>
        <value>系统管理员</value>
    </filters>
    <label>Admin Users</label>
    <language>en_US</language>
</ListView>