force-app/main/default/objects/User/listViews/CA_User.listView-meta.xml
<ListView>
    <fullName>CA_User</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>startsWith</operation>
        <value>Canada</value>
    </filters>
    <label>CA User</label>
    <language>en_US</language>
</ListView>