force-app/main/default/objects/User/listViews/hisense_chile.listView-meta.xml
<ListView>
    <fullName>hisense_chile</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>MANAGER</columns>
    <columns>Sales_Region__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Region__c</field>
        <operation>equals</operation>
        <value>Hisense Chile</value>
    </filters>
    <label>hisense chile</label>
    <language>en_US</language>
</ListView>