force-app/main/default/objects/User/listViews/Mexico_Users.listView-meta.xml
<ListView>
    <fullName>Mexico_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>Department__c</columns>
    <columns>LANGUAGE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>contains</operation>
        <value>promoter,supervisor,store manager</value>
    </filters>
    <filters>
        <field>Sales_Region__c</field>
        <operation>equals</operation>
        <value>Hisense Mexico</value>
    </filters>
    <label>Mexico Store Management Users</label>
    <language>en_US</language>
</ListView>