force-app/main/default/objects/User/listViews/USA_Store_Management_Users.listView-meta.xml
<ListView>
    <fullName>USA_Store_Management_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>LANGUAGE</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Region__c</field>
        <operation>equals</operation>
        <value>Hisense USA</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>contains</operation>
        <value>Promoter,Floorwalker,Store Manager</value>
    </filters>
    <label>USA Store Management Users</label>
    <language>en_US</language>
</ListView>